Eaglecrest and Greatmarches ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -1036,3 +1036,113 @@
  A24_idea_7_3:0 "Moorman 7"
  A24_idea_7_3_desc:0 "Moorman 7 desc" 
 
+
+ A52_ideas_1:0 "Eaglecrester Ideas 1"
+ A52_ideas_1_start:0 "Eaglecrester Traditions 1"
+ A52_ideas_1_bonus:0 "Eaglecrester Ambition 1"
+ A52_idea_1_1:0 "Eaglecrester 1"
+ A52_idea_1_1_desc:0 "Eaglecrester 1 desc"
+ A52_idea_2_1:0 "Eaglecrester 2"
+ A52_idea_2_1_desc:0 "Eaglecrester 2 desc"
+ A52_idea_3_1:0 "Eaglecrester 3"
+ A52_idea_3_1_desc:0 "Eaglecrester 3 desc"
+ A52_idea_4_1:0 "Eaglecrester 4"
+ A52_idea_4_1_desc:0 "Eaglecrester 4 desc"
+ A52_idea_5_1:0 "Eaglecrester 5"
+ A52_idea_5_1_desc:0 "Eaglecrester 5 desc"
+ A52_idea_6_1:0 "Eaglecrester 6"
+ A52_idea_6_1_desc:0 "Eaglecrester 6 desc"
+ A52_idea_7_1:0 "Eaglecrester 7"
+ A52_idea_7_1_desc:0 "Eaglecrester 7 desc" 
+
+ A52_ideas_2:0 "Eaglecrester Ideas 2"
+ A52_ideas_2_start:0 "Eaglecrester Traditions 2"
+ A52_ideas_2_bonus:0 "Eaglecrester Ambition 2"
+ A52_idea_1_2:0 "Eaglecrester 1"
+ A52_idea_1_2_desc:0 "Eaglecrester 1 desc"
+ A52_idea_2_2:0 "Eaglecrester 2"
+ A52_idea_2_2_desc:0 "Eaglecrester 2 desc"
+ A52_idea_3_2:0 "Eaglecrester 3"
+ A52_idea_3_2_desc:0 "Eaglecrester 3 desc"
+ A52_idea_4_2:0 "Eaglecrester 4"
+ A52_idea_4_2_desc:0 "Eaglecrester 4 desc"
+ A52_idea_5_2:0 "Eaglecrester 5"
+ A52_idea_5_2_desc:0 "Eaglecrester 5 desc"
+ A52_idea_6_2:0 "Eaglecrester 6"
+ A52_idea_6_2_desc:0 "Eaglecrester 6 desc"
+ A52_idea_7_2:0 "Eaglecrester 7"
+ A52_idea_7_2_desc:0 "Eaglecrester 7 desc" 
+
+ A52_ideas_3:0 "Eaglecrester Ideas 3"
+ A52_ideas_3_start:0 "Eaglecrester Traditions 3"
+ A52_ideas_3_bonus:0 "Eaglecrester Ambition 3"
+ A52_idea_1_3:0 "Eaglecrester 1"
+ A52_idea_1_3_desc:0 "Eaglecrester 1 desc"
+ A52_idea_2_3:0 "Eaglecrester 2"
+ A52_idea_2_3_desc:0 "Eaglecrester 2 desc"
+ A52_idea_3_3:0 "Eaglecrester 3"
+ A52_idea_3_3_desc:0 "Eaglecrester 3 desc"
+ A52_idea_4_3:0 "Eaglecrester 4"
+ A52_idea_4_3_desc:0 "Eaglecrester 4 desc"
+ A52_idea_5_3:0 "Eaglecrester 5"
+ A52_idea_5_3_desc:0 "Eaglecrester 5 desc"
+ A52_idea_6_3:0 "Eaglecrester 6"
+ A52_idea_6_3_desc:0 "Eaglecrester 6 desc"
+ A52_idea_7_3:0 "Eaglecrester 7"
+ A52_idea_7_3_desc:0 "Eaglecrester 7 desc" 
+
+
+ A50_ideas_1:0 "Greatmarches Ideas 1"
+ A50_ideas_1_start:0 "Greatmarches Traditions 1"
+ A50_ideas_1_bonus:0 "Greatmarches Ambition 1"
+ A50_idea_1_1:0 "Greatmarches 1"
+ A50_idea_1_1_desc:0 "Greatmarches 1 desc"
+ A50_idea_2_1:0 "Greatmarches 2"
+ A50_idea_2_1_desc:0 "Greatmarches 2 desc"
+ A50_idea_3_1:0 "Greatmarches 3"
+ A50_idea_3_1_desc:0 "Greatmarches 3 desc"
+ A50_idea_4_1:0 "Greatmarches 4"
+ A50_idea_4_1_desc:0 "Greatmarches 4 desc"
+ A50_idea_5_1:0 "Greatmarches 5"
+ A50_idea_5_1_desc:0 "Greatmarches 5 desc"
+ A50_idea_6_1:0 "Greatmarches 6"
+ A50_idea_6_1_desc:0 "Greatmarches 6 desc"
+ A50_idea_7_1:0 "Greatmarches 7"
+ A50_idea_7_1_desc:0 "Greatmarches 7 desc" 
+
+ A50_ideas_2:0 "Greatmarches Ideas 2"
+ A50_ideas_2_start:0 "Greatmarches Traditions 2"
+ A50_ideas_2_bonus:0 "Greatmarches Ambition 2"
+ A50_idea_1_2:0 "Greatmarches 1"
+ A50_idea_1_2_desc:0 "Greatmarches 1 desc"
+ A50_idea_2_2:0 "Greatmarches 2"
+ A50_idea_2_2_desc:0 "Greatmarches 2 desc"
+ A50_idea_3_2:0 "Greatmarches 3"
+ A50_idea_3_2_desc:0 "Greatmarches 3 desc"
+ A50_idea_4_2:0 "Greatmarches 4"
+ A50_idea_4_2_desc:0 "Greatmarches 4 desc"
+ A50_idea_5_2:0 "Greatmarches 5"
+ A50_idea_5_2_desc:0 "Greatmarches 5 desc"
+ A50_idea_6_2:0 "Greatmarches 6"
+ A50_idea_6_2_desc:0 "Greatmarches 6 desc"
+ A50_idea_7_2:0 "Greatmarches 7"
+ A50_idea_7_2_desc:0 "Greatmarches 7 desc" 
+
+ A50_ideas_3:0 "Greatmarches Ideas 3"
+ A50_ideas_3_start:0 "Greatmarches Traditions 3"
+ A50_ideas_3_bonus:0 "Greatmarches Ambition 3"
+ A50_idea_1_3:0 "Greatmarches 1"
+ A50_idea_1_3_desc:0 "Greatmarches 1 desc"
+ A50_idea_2_3:0 "Greatmarches 2"
+ A50_idea_2_3_desc:0 "Greatmarches 2 desc"
+ A50_idea_3_3:0 "Greatmarches 3"
+ A50_idea_3_3_desc:0 "Greatmarches 3 desc"
+ A50_idea_4_3:0 "Greatmarches 4"
+ A50_idea_4_3_desc:0 "Greatmarches 4 desc"
+ A50_idea_5_3:0 "Greatmarches 5"
+ A50_idea_5_3_desc:0 "Greatmarches 5 desc"
+ A50_idea_6_3:0 "Greatmarches 6"
+ A50_idea_6_3_desc:0 "Greatmarches 6 desc"
+ A50_idea_7_3:0 "Greatmarches 7"
+ A50_idea_7_3_desc:0 "Greatmarches 7 desc" 
+
