Blue reachmen ideas, also some culture fixes

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -1146,3 +1146,497 @@
  A50_idea_7_3:0 "Greatmarches 7"
  A50_idea_7_3_desc:0 "Greatmarches 7 desc" 
 
+
+ Z29_ideas_1:0 "Coldmarket Ideas 1"
+ Z29_ideas_1_start:0 "Coldmarket Traditions 1"
+ Z29_ideas_1_bonus:0 "Coldmarket Ambition 1"
+ Z29_idea_1_1:0 "Coldmarket 1"
+ Z29_idea_1_1_desc:0 "Coldmarket 1 desc"
+ Z29_idea_2_1:0 "Coldmarket 2"
+ Z29_idea_2_1_desc:0 "Coldmarket 2 desc"
+ Z29_idea_3_1:0 "Coldmarket 3"
+ Z29_idea_3_1_desc:0 "Coldmarket 3 desc"
+ Z29_idea_4_1:0 "Coldmarket 4"
+ Z29_idea_4_1_desc:0 "Coldmarket 4 desc"
+ Z29_idea_5_1:0 "Coldmarket 5"
+ Z29_idea_5_1_desc:0 "Coldmarket 5 desc"
+ Z29_idea_6_1:0 "Coldmarket 6"
+ Z29_idea_6_1_desc:0 "Coldmarket 6 desc"
+ Z29_idea_7_1:0 "Coldmarket 7"
+ Z29_idea_7_1_desc:0 "Coldmarket 7 desc" 
+
+ Z29_ideas_2:0 "Coldmarket Ideas 2"
+ Z29_ideas_2_start:0 "Coldmarket Traditions 2"
+ Z29_ideas_2_bonus:0 "Coldmarket Ambition 2"
+ Z29_idea_1_2:0 "Coldmarket 1"
+ Z29_idea_1_2_desc:0 "Coldmarket 1 desc"
+ Z29_idea_2_2:0 "Coldmarket 2"
+ Z29_idea_2_2_desc:0 "Coldmarket 2 desc"
+ Z29_idea_3_2:0 "Coldmarket 3"
+ Z29_idea_3_2_desc:0 "Coldmarket 3 desc"
+ Z29_idea_4_2:0 "Coldmarket 4"
+ Z29_idea_4_2_desc:0 "Coldmarket 4 desc"
+ Z29_idea_5_2:0 "Coldmarket 5"
+ Z29_idea_5_2_desc:0 "Coldmarket 5 desc"
+ Z29_idea_6_2:0 "Coldmarket 6"
+ Z29_idea_6_2_desc:0 "Coldmarket 6 desc"
+ Z29_idea_7_2:0 "Coldmarket 7"
+ Z29_idea_7_2_desc:0 "Coldmarket 7 desc" 
+
+ Z29_ideas_3:0 "Coldmarket Ideas 3"
+ Z29_ideas_3_start:0 "Coldmarket Traditions 3"
+ Z29_ideas_3_bonus:0 "Coldmarket Ambition 3"
+ Z29_idea_1_3:0 "Coldmarket 1"
+ Z29_idea_1_3_desc:0 "Coldmarket 1 desc"
+ Z29_idea_2_3:0 "Coldmarket 2"
+ Z29_idea_2_3_desc:0 "Coldmarket 2 desc"
+ Z29_idea_3_3:0 "Coldmarket 3"
+ Z29_idea_3_3_desc:0 "Coldmarket 3 desc"
+ Z29_idea_4_3:0 "Coldmarket 4"
+ Z29_idea_4_3_desc:0 "Coldmarket 4 desc"
+ Z29_idea_5_3:0 "Coldmarket 5"
+ Z29_idea_5_3_desc:0 "Coldmarket 5 desc"
+ Z29_idea_6_3:0 "Coldmarket 6"
+ Z29_idea_6_3_desc:0 "Coldmarket 6 desc"
+ Z29_idea_7_3:0 "Coldmarket 7"
+ Z29_idea_7_3_desc:0 "Coldmarket 7 desc" 
+
+
+ Z28_ideas_1:0 "Bayvic Ideas 1"
+ Z28_ideas_1_start:0 "Bayvic Traditions 1"
+ Z28_ideas_1_bonus:0 "Bayvic Ambition 1"
+ Z28_idea_1_1:0 "Bayvic 1"
+ Z28_idea_1_1_desc:0 "Bayvic 1 desc"
+ Z28_idea_2_1:0 "Bayvic 2"
+ Z28_idea_2_1_desc:0 "Bayvic 2 desc"
+ Z28_idea_3_1:0 "Bayvic 3"
+ Z28_idea_3_1_desc:0 "Bayvic 3 desc"
+ Z28_idea_4_1:0 "Bayvic 4"
+ Z28_idea_4_1_desc:0 "Bayvic 4 desc"
+ Z28_idea_5_1:0 "Bayvic 5"
+ Z28_idea_5_1_desc:0 "Bayvic 5 desc"
+ Z28_idea_6_1:0 "Bayvic 6"
+ Z28_idea_6_1_desc:0 "Bayvic 6 desc"
+ Z28_idea_7_1:0 "Bayvic 7"
+ Z28_idea_7_1_desc:0 "Bayvic 7 desc" 
+
+ Z28_ideas_2:0 "Bayvic Ideas 2"
+ Z28_ideas_2_start:0 "Bayvic Traditions 2"
+ Z28_ideas_2_bonus:0 "Bayvic Ambition 2"
+ Z28_idea_1_2:0 "Bayvic 1"
+ Z28_idea_1_2_desc:0 "Bayvic 1 desc"
+ Z28_idea_2_2:0 "Bayvic 2"
+ Z28_idea_2_2_desc:0 "Bayvic 2 desc"
+ Z28_idea_3_2:0 "Bayvic 3"
+ Z28_idea_3_2_desc:0 "Bayvic 3 desc"
+ Z28_idea_4_2:0 "Bayvic 4"
+ Z28_idea_4_2_desc:0 "Bayvic 4 desc"
+ Z28_idea_5_2:0 "Bayvic 5"
+ Z28_idea_5_2_desc:0 "Bayvic 5 desc"
+ Z28_idea_6_2:0 "Bayvic 6"
+ Z28_idea_6_2_desc:0 "Bayvic 6 desc"
+ Z28_idea_7_2:0 "Bayvic 7"
+ Z28_idea_7_2_desc:0 "Bayvic 7 desc" 
+
+ Z28_ideas_3:0 "Bayvic Ideas 3"
+ Z28_ideas_3_start:0 "Bayvic Traditions 3"
+ Z28_ideas_3_bonus:0 "Bayvic Ambition 3"
+ Z28_idea_1_3:0 "Bayvic 1"
+ Z28_idea_1_3_desc:0 "Bayvic 1 desc"
+ Z28_idea_2_3:0 "Bayvic 2"
+ Z28_idea_2_3_desc:0 "Bayvic 2 desc"
+ Z28_idea_3_3:0 "Bayvic 3"
+ Z28_idea_3_3_desc:0 "Bayvic 3 desc"
+ Z28_idea_4_3:0 "Bayvic 4"
+ Z28_idea_4_3_desc:0 "Bayvic 4 desc"
+ Z28_idea_5_3:0 "Bayvic 5"
+ Z28_idea_5_3_desc:0 "Bayvic 5 desc"
+ Z28_idea_6_3:0 "Bayvic 6"
+ Z28_idea_6_3_desc:0 "Bayvic 6 desc"
+ Z28_idea_7_3:0 "Bayvic 7"
+ Z28_idea_7_3_desc:0 "Bayvic 7 desc" 
+
+
+ Z24_ideas_1:0 "Envermarck Ideas 1"
+ Z24_ideas_1_start:0 "Envermarck Traditions 1"
+ Z24_ideas_1_bonus:0 "Envermarck Ambition 1"
+ Z24_idea_1_1:0 "Envermarck 1"
+ Z24_idea_1_1_desc:0 "Envermarck 1 desc"
+ Z24_idea_2_1:0 "Envermarck 2"
+ Z24_idea_2_1_desc:0 "Envermarck 2 desc"
+ Z24_idea_3_1:0 "Envermarck 3"
+ Z24_idea_3_1_desc:0 "Envermarck 3 desc"
+ Z24_idea_4_1:0 "Envermarck 4"
+ Z24_idea_4_1_desc:0 "Envermarck 4 desc"
+ Z24_idea_5_1:0 "Envermarck 5"
+ Z24_idea_5_1_desc:0 "Envermarck 5 desc"
+ Z24_idea_6_1:0 "Envermarck 6"
+ Z24_idea_6_1_desc:0 "Envermarck 6 desc"
+ Z24_idea_7_1:0 "Envermarck 7"
+ Z24_idea_7_1_desc:0 "Envermarck 7 desc" 
+
+ Z24_ideas_2:0 "Envermarck Ideas 2"
+ Z24_ideas_2_start:0 "Envermarck Traditions 2"
+ Z24_ideas_2_bonus:0 "Envermarck Ambition 2"
+ Z24_idea_1_2:0 "Envermarck 1"
+ Z24_idea_1_2_desc:0 "Envermarck 1 desc"
+ Z24_idea_2_2:0 "Envermarck 2"
+ Z24_idea_2_2_desc:0 "Envermarck 2 desc"
+ Z24_idea_3_2:0 "Envermarck 3"
+ Z24_idea_3_2_desc:0 "Envermarck 3 desc"
+ Z24_idea_4_2:0 "Envermarck 4"
+ Z24_idea_4_2_desc:0 "Envermarck 4 desc"
+ Z24_idea_5_2:0 "Envermarck 5"
+ Z24_idea_5_2_desc:0 "Envermarck 5 desc"
+ Z24_idea_6_2:0 "Envermarck 6"
+ Z24_idea_6_2_desc:0 "Envermarck 6 desc"
+ Z24_idea_7_2:0 "Envermarck 7"
+ Z24_idea_7_2_desc:0 "Envermarck 7 desc" 
+
+ Z24_ideas_3:0 "Envermarck Ideas 3"
+ Z24_ideas_3_start:0 "Envermarck Traditions 3"
+ Z24_ideas_3_bonus:0 "Envermarck Ambition 3"
+ Z24_idea_1_3:0 "Envermarck 1"
+ Z24_idea_1_3_desc:0 "Envermarck 1 desc"
+ Z24_idea_2_3:0 "Envermarck 2"
+ Z24_idea_2_3_desc:0 "Envermarck 2 desc"
+ Z24_idea_3_3:0 "Envermarck 3"
+ Z24_idea_3_3_desc:0 "Envermarck 3 desc"
+ Z24_idea_4_3:0 "Envermarck 4"
+ Z24_idea_4_3_desc:0 "Envermarck 4 desc"
+ Z24_idea_5_3:0 "Envermarck 5"
+ Z24_idea_5_3_desc:0 "Envermarck 5 desc"
+ Z24_idea_6_3:0 "Envermarck 6"
+ Z24_idea_6_3_desc:0 "Envermarck 6 desc"
+ Z24_idea_7_3:0 "Envermarck 7"
+ Z24_idea_7_3_desc:0 "Envermarck 7 desc" 
+
+
+ Z25_ideas_1:0 "Dinesck Ideas 1"
+ Z25_ideas_1_start:0 "Dinesck Traditions 1"
+ Z25_ideas_1_bonus:0 "Dinesck Ambition 1"
+ Z25_idea_1_1:0 "Dinesck 1"
+ Z25_idea_1_1_desc:0 "Dinesck 1 desc"
+ Z25_idea_2_1:0 "Dinesck 2"
+ Z25_idea_2_1_desc:0 "Dinesck 2 desc"
+ Z25_idea_3_1:0 "Dinesck 3"
+ Z25_idea_3_1_desc:0 "Dinesck 3 desc"
+ Z25_idea_4_1:0 "Dinesck 4"
+ Z25_idea_4_1_desc:0 "Dinesck 4 desc"
+ Z25_idea_5_1:0 "Dinesck 5"
+ Z25_idea_5_1_desc:0 "Dinesck 5 desc"
+ Z25_idea_6_1:0 "Dinesck 6"
+ Z25_idea_6_1_desc:0 "Dinesck 6 desc"
+ Z25_idea_7_1:0 "Dinesck 7"
+ Z25_idea_7_1_desc:0 "Dinesck 7 desc" 
+
+ Z25_ideas_2:0 "Dinesck Ideas 2"
+ Z25_ideas_2_start:0 "Dinesck Traditions 2"
+ Z25_ideas_2_bonus:0 "Dinesck Ambition 2"
+ Z25_idea_1_2:0 "Dinesck 1"
+ Z25_idea_1_2_desc:0 "Dinesck 1 desc"
+ Z25_idea_2_2:0 "Dinesck 2"
+ Z25_idea_2_2_desc:0 "Dinesck 2 desc"
+ Z25_idea_3_2:0 "Dinesck 3"
+ Z25_idea_3_2_desc:0 "Dinesck 3 desc"
+ Z25_idea_4_2:0 "Dinesck 4"
+ Z25_idea_4_2_desc:0 "Dinesck 4 desc"
+ Z25_idea_5_2:0 "Dinesck 5"
+ Z25_idea_5_2_desc:0 "Dinesck 5 desc"
+ Z25_idea_6_2:0 "Dinesck 6"
+ Z25_idea_6_2_desc:0 "Dinesck 6 desc"
+ Z25_idea_7_2:0 "Dinesck 7"
+ Z25_idea_7_2_desc:0 "Dinesck 7 desc" 
+
+ Z25_ideas_3:0 "Dinesck Ideas 3"
+ Z25_ideas_3_start:0 "Dinesck Traditions 3"
+ Z25_ideas_3_bonus:0 "Dinesck Ambition 3"
+ Z25_idea_1_3:0 "Dinesck 1"
+ Z25_idea_1_3_desc:0 "Dinesck 1 desc"
+ Z25_idea_2_3:0 "Dinesck 2"
+ Z25_idea_2_3_desc:0 "Dinesck 2 desc"
+ Z25_idea_3_3:0 "Dinesck 3"
+ Z25_idea_3_3_desc:0 "Dinesck 3 desc"
+ Z25_idea_4_3:0 "Dinesck 4"
+ Z25_idea_4_3_desc:0 "Dinesck 4 desc"
+ Z25_idea_5_3:0 "Dinesck 5"
+ Z25_idea_5_3_desc:0 "Dinesck 5 desc"
+ Z25_idea_6_3:0 "Dinesck 6"
+ Z25_idea_6_3_desc:0 "Dinesck 6 desc"
+ Z25_idea_7_3:0 "Dinesck 7"
+ Z25_idea_7_3_desc:0 "Dinesck 7 desc" 
+
+
+ Z30_ideas_1:0 "Everwharf Ideas 1"
+ Z30_ideas_1_start:0 "Everwharf Traditions 1"
+ Z30_ideas_1_bonus:0 "Everwharf Ambition 1"
+ Z30_idea_1_1:0 "Everwharf 1"
+ Z30_idea_1_1_desc:0 "Everwharf 1 desc"
+ Z30_idea_2_1:0 "Everwharf 2"
+ Z30_idea_2_1_desc:0 "Everwharf 2 desc"
+ Z30_idea_3_1:0 "Everwharf 3"
+ Z30_idea_3_1_desc:0 "Everwharf 3 desc"
+ Z30_idea_4_1:0 "Everwharf 4"
+ Z30_idea_4_1_desc:0 "Everwharf 4 desc"
+ Z30_idea_5_1:0 "Everwharf 5"
+ Z30_idea_5_1_desc:0 "Everwharf 5 desc"
+ Z30_idea_6_1:0 "Everwharf 6"
+ Z30_idea_6_1_desc:0 "Everwharf 6 desc"
+ Z30_idea_7_1:0 "Everwharf 7"
+ Z30_idea_7_1_desc:0 "Everwharf 7 desc" 
+
+ Z30_ideas_2:0 "Everwharf Ideas 2"
+ Z30_ideas_2_start:0 "Everwharf Traditions 2"
+ Z30_ideas_2_bonus:0 "Everwharf Ambition 2"
+ Z30_idea_1_2:0 "Everwharf 1"
+ Z30_idea_1_2_desc:0 "Everwharf 1 desc"
+ Z30_idea_2_2:0 "Everwharf 2"
+ Z30_idea_2_2_desc:0 "Everwharf 2 desc"
+ Z30_idea_3_2:0 "Everwharf 3"
+ Z30_idea_3_2_desc:0 "Everwharf 3 desc"
+ Z30_idea_4_2:0 "Everwharf 4"
+ Z30_idea_4_2_desc:0 "Everwharf 4 desc"
+ Z30_idea_5_2:0 "Everwharf 5"
+ Z30_idea_5_2_desc:0 "Everwharf 5 desc"
+ Z30_idea_6_2:0 "Everwharf 6"
+ Z30_idea_6_2_desc:0 "Everwharf 6 desc"
+ Z30_idea_7_2:0 "Everwharf 7"
+ Z30_idea_7_2_desc:0 "Everwharf 7 desc" 
+
+ Z30_ideas_3:0 "Everwharf Ideas 3"
+ Z30_ideas_3_start:0 "Everwharf Traditions 3"
+ Z30_ideas_3_bonus:0 "Everwharf Ambition 3"
+ Z30_idea_1_3:0 "Everwharf 1"
+ Z30_idea_1_3_desc:0 "Everwharf 1 desc"
+ Z30_idea_2_3:0 "Everwharf 2"
+ Z30_idea_2_3_desc:0 "Everwharf 2 desc"
+ Z30_idea_3_3:0 "Everwharf 3"
+ Z30_idea_3_3_desc:0 "Everwharf 3 desc"
+ Z30_idea_4_3:0 "Everwharf 4"
+ Z30_idea_4_3_desc:0 "Everwharf 4 desc"
+ Z30_idea_5_3:0 "Everwharf 5"
+ Z30_idea_5_3_desc:0 "Everwharf 5 desc"
+ Z30_idea_6_3:0 "Everwharf 6"
+ Z30_idea_6_3_desc:0 "Everwharf 6 desc"
+ Z30_idea_7_3:0 "Everwharf 7"
+ Z30_idea_7_3_desc:0 "Everwharf 7 desc" 
+
+
+ Z31_ideas_1:0 "Reachpier Ideas 1"
+ Z31_ideas_1_start:0 "Reachpier Traditions 1"
+ Z31_ideas_1_bonus:0 "Reachpier Ambition 1"
+ Z31_idea_1_1:0 "Reachpier 1"
+ Z31_idea_1_1_desc:0 "Reachpier 1 desc"
+ Z31_idea_2_1:0 "Reachpier 2"
+ Z31_idea_2_1_desc:0 "Reachpier 2 desc"
+ Z31_idea_3_1:0 "Reachpier 3"
+ Z31_idea_3_1_desc:0 "Reachpier 3 desc"
+ Z31_idea_4_1:0 "Reachpier 4"
+ Z31_idea_4_1_desc:0 "Reachpier 4 desc"
+ Z31_idea_5_1:0 "Reachpier 5"
+ Z31_idea_5_1_desc:0 "Reachpier 5 desc"
+ Z31_idea_6_1:0 "Reachpier 6"
+ Z31_idea_6_1_desc:0 "Reachpier 6 desc"
+ Z31_idea_7_1:0 "Reachpier 7"
+ Z31_idea_7_1_desc:0 "Reachpier 7 desc" 
+
+ Z31_ideas_2:0 "Reachpier Ideas 2"
+ Z31_ideas_2_start:0 "Reachpier Traditions 2"
+ Z31_ideas_2_bonus:0 "Reachpier Ambition 2"
+ Z31_idea_1_2:0 "Reachpier 1"
+ Z31_idea_1_2_desc:0 "Reachpier 1 desc"
+ Z31_idea_2_2:0 "Reachpier 2"
+ Z31_idea_2_2_desc:0 "Reachpier 2 desc"
+ Z31_idea_3_2:0 "Reachpier 3"
+ Z31_idea_3_2_desc:0 "Reachpier 3 desc"
+ Z31_idea_4_2:0 "Reachpier 4"
+ Z31_idea_4_2_desc:0 "Reachpier 4 desc"
+ Z31_idea_5_2:0 "Reachpier 5"
+ Z31_idea_5_2_desc:0 "Reachpier 5 desc"
+ Z31_idea_6_2:0 "Reachpier 6"
+ Z31_idea_6_2_desc:0 "Reachpier 6 desc"
+ Z31_idea_7_2:0 "Reachpier 7"
+ Z31_idea_7_2_desc:0 "Reachpier 7 desc" 
+
+ Z31_ideas_3:0 "Reachpier Ideas 3"
+ Z31_ideas_3_start:0 "Reachpier Traditions 3"
+ Z31_ideas_3_bonus:0 "Reachpier Ambition 3"
+ Z31_idea_1_3:0 "Reachpier 1"
+ Z31_idea_1_3_desc:0 "Reachpier 1 desc"
+ Z31_idea_2_3:0 "Reachpier 2"
+ Z31_idea_2_3_desc:0 "Reachpier 2 desc"
+ Z31_idea_3_3:0 "Reachpier 3"
+ Z31_idea_3_3_desc:0 "Reachpier 3 desc"
+ Z31_idea_4_3:0 "Reachpier 4"
+ Z31_idea_4_3_desc:0 "Reachpier 4 desc"
+ Z31_idea_5_3:0 "Reachpier 5"
+ Z31_idea_5_3_desc:0 "Reachpier 5 desc"
+ Z31_idea_6_3:0 "Reachpier 6"
+ Z31_idea_6_3_desc:0 "Reachpier 6 desc"
+ Z31_idea_7_3:0 "Reachpier 7"
+ Z31_idea_7_3_desc:0 "Reachpier 7 desc" 
+
+
+ Z33_ideas_1:0 "Frostwall Ideas 1"
+ Z33_ideas_1_start:0 "Frostwall Traditions 1"
+ Z33_ideas_1_bonus:0 "Frostwall Ambition 1"
+ Z33_idea_1_1:0 "Frostwall 1"
+ Z33_idea_1_1_desc:0 "Frostwall 1 desc"
+ Z33_idea_2_1:0 "Frostwall 2"
+ Z33_idea_2_1_desc:0 "Frostwall 2 desc"
+ Z33_idea_3_1:0 "Frostwall 3"
+ Z33_idea_3_1_desc:0 "Frostwall 3 desc"
+ Z33_idea_4_1:0 "Frostwall 4"
+ Z33_idea_4_1_desc:0 "Frostwall 4 desc"
+ Z33_idea_5_1:0 "Frostwall 5"
+ Z33_idea_5_1_desc:0 "Frostwall 5 desc"
+ Z33_idea_6_1:0 "Frostwall 6"
+ Z33_idea_6_1_desc:0 "Frostwall 6 desc"
+ Z33_idea_7_1:0 "Frostwall 7"
+ Z33_idea_7_1_desc:0 "Frostwall 7 desc" 
+
+ Z33_ideas_2:0 "Frostwall Ideas 2"
+ Z33_ideas_2_start:0 "Frostwall Traditions 2"
+ Z33_ideas_2_bonus:0 "Frostwall Ambition 2"
+ Z33_idea_1_2:0 "Frostwall 1"
+ Z33_idea_1_2_desc:0 "Frostwall 1 desc"
+ Z33_idea_2_2:0 "Frostwall 2"
+ Z33_idea_2_2_desc:0 "Frostwall 2 desc"
+ Z33_idea_3_2:0 "Frostwall 3"
+ Z33_idea_3_2_desc:0 "Frostwall 3 desc"
+ Z33_idea_4_2:0 "Frostwall 4"
+ Z33_idea_4_2_desc:0 "Frostwall 4 desc"
+ Z33_idea_5_2:0 "Frostwall 5"
+ Z33_idea_5_2_desc:0 "Frostwall 5 desc"
+ Z33_idea_6_2:0 "Frostwall 6"
+ Z33_idea_6_2_desc:0 "Frostwall 6 desc"
+ Z33_idea_7_2:0 "Frostwall 7"
+ Z33_idea_7_2_desc:0 "Frostwall 7 desc" 
+
+ Z33_ideas_3:0 "Frostwall Ideas 3"
+ Z33_ideas_3_start:0 "Frostwall Traditions 3"
+ Z33_ideas_3_bonus:0 "Frostwall Ambition 3"
+ Z33_idea_1_3:0 "Frostwall 1"
+ Z33_idea_1_3_desc:0 "Frostwall 1 desc"
+ Z33_idea_2_3:0 "Frostwall 2"
+ Z33_idea_2_3_desc:0 "Frostwall 2 desc"
+ Z33_idea_3_3:0 "Frostwall 3"
+ Z33_idea_3_3_desc:0 "Frostwall 3 desc"
+ Z33_idea_4_3:0 "Frostwall 4"
+ Z33_idea_4_3_desc:0 "Frostwall 4 desc"
+ Z33_idea_5_3:0 "Frostwall 5"
+ Z33_idea_5_3_desc:0 "Frostwall 5 desc"
+ Z33_idea_6_3:0 "Frostwall 6"
+ Z33_idea_6_3_desc:0 "Frostwall 6 desc"
+ Z33_idea_7_3:0 "Frostwall 7"
+ Z33_idea_7_3_desc:0 "Frostwall 7 desc" 
+
+
+ Z32_ideas_1:0 "Alencay Ideas 1"
+ Z32_ideas_1_start:0 "Alencay Traditions 1"
+ Z32_ideas_1_bonus:0 "Alencay Ambition 1"
+ Z32_idea_1_1:0 "Alencay 1"
+ Z32_idea_1_1_desc:0 "Alencay 1 desc"
+ Z32_idea_2_1:0 "Alencay 2"
+ Z32_idea_2_1_desc:0 "Alencay 2 desc"
+ Z32_idea_3_1:0 "Alencay 3"
+ Z32_idea_3_1_desc:0 "Alencay 3 desc"
+ Z32_idea_4_1:0 "Alencay 4"
+ Z32_idea_4_1_desc:0 "Alencay 4 desc"
+ Z32_idea_5_1:0 "Alencay 5"
+ Z32_idea_5_1_desc:0 "Alencay 5 desc"
+ Z32_idea_6_1:0 "Alencay 6"
+ Z32_idea_6_1_desc:0 "Alencay 6 desc"
+ Z32_idea_7_1:0 "Alencay 7"
+ Z32_idea_7_1_desc:0 "Alencay 7 desc" 
+
+ Z32_ideas_2:0 "Alencay Ideas 2"
+ Z32_ideas_2_start:0 "Alencay Traditions 2"
+ Z32_ideas_2_bonus:0 "Alencay Ambition 2"
+ Z32_idea_1_2:0 "Alencay 1"
+ Z32_idea_1_2_desc:0 "Alencay 1 desc"
+ Z32_idea_2_2:0 "Alencay 2"
+ Z32_idea_2_2_desc:0 "Alencay 2 desc"
+ Z32_idea_3_2:0 "Alencay 3"
+ Z32_idea_3_2_desc:0 "Alencay 3 desc"
+ Z32_idea_4_2:0 "Alencay 4"
+ Z32_idea_4_2_desc:0 "Alencay 4 desc"
+ Z32_idea_5_2:0 "Alencay 5"
+ Z32_idea_5_2_desc:0 "Alencay 5 desc"
+ Z32_idea_6_2:0 "Alencay 6"
+ Z32_idea_6_2_desc:0 "Alencay 6 desc"
+ Z32_idea_7_2:0 "Alencay 7"
+ Z32_idea_7_2_desc:0 "Alencay 7 desc" 
+
+ Z32_ideas_3:0 "Alencay Ideas 3"
+ Z32_ideas_3_start:0 "Alencay Traditions 3"
+ Z32_ideas_3_bonus:0 "Alencay Ambition 3"
+ Z32_idea_1_3:0 "Alencay 1"
+ Z32_idea_1_3_desc:0 "Alencay 1 desc"
+ Z32_idea_2_3:0 "Alencay 2"
+ Z32_idea_2_3_desc:0 "Alencay 2 desc"
+ Z32_idea_3_3:0 "Alencay 3"
+ Z32_idea_3_3_desc:0 "Alencay 3 desc"
+ Z32_idea_4_3:0 "Alencay 4"
+ Z32_idea_4_3_desc:0 "Alencay 4 desc"
+ Z32_idea_5_3:0 "Alencay 5"
+ Z32_idea_5_3_desc:0 "Alencay 5 desc"
+ Z32_idea_6_3:0 "Alencay 6"
+ Z32_idea_6_3_desc:0 "Alencay 6 desc"
+ Z32_idea_7_3:0 "Alencay 7"
+ Z32_idea_7_3_desc:0 "Alencay 7 desc"
+
+
+ Z21_ideas_1:0 "Serpentgard Ideas 1"
+ Z21_ideas_1_start:0 "Serpentgard Traditions 1"
+ Z21_ideas_1_bonus:0 "Serpentgard Ambition 1"
+ Z21_idea_1_1:0 "Serpentgard 1"
+ Z21_idea_1_1_desc:0 "Serpentgard 1 desc"
+ Z21_idea_2_1:0 "Serpentgard 2"
+ Z21_idea_2_1_desc:0 "Serpentgard 2 desc"
+ Z21_idea_3_1:0 "Serpentgard 3"
+ Z21_idea_3_1_desc:0 "Serpentgard 3 desc"
+ Z21_idea_4_1:0 "Serpentgard 4"
+ Z21_idea_4_1_desc:0 "Serpentgard 4 desc"
+ Z21_idea_5_1:0 "Serpentgard 5"
+ Z21_idea_5_1_desc:0 "Serpentgard 5 desc"
+ Z21_idea_6_1:0 "Serpentgard 6"
+ Z21_idea_6_1_desc:0 "Serpentgard 6 desc"
+ Z21_idea_7_1:0 "Serpentgard 7"
+ Z21_idea_7_1_desc:0 "Serpentgard 7 desc" 
+
+ Z21_ideas_2:0 "Serpentgard Ideas 2"
+ Z21_ideas_2_start:0 "Serpentgard Traditions 2"
+ Z21_ideas_2_bonus:0 "Serpentgard Ambition 2"
+ Z21_idea_1_2:0 "Serpentgard 1"
+ Z21_idea_1_2_desc:0 "Serpentgard 1 desc"
+ Z21_idea_2_2:0 "Serpentgard 2"
+ Z21_idea_2_2_desc:0 "Serpentgard 2 desc"
+ Z21_idea_3_2:0 "Serpentgard 3"
+ Z21_idea_3_2_desc:0 "Serpentgard 3 desc"
+ Z21_idea_4_2:0 "Serpentgard 4"
+ Z21_idea_4_2_desc:0 "Serpentgard 4 desc"
+ Z21_idea_5_2:0 "Serpentgard 5"
+ Z21_idea_5_2_desc:0 "Serpentgard 5 desc"
+ Z21_idea_6_2:0 "Serpentgard 6"
+ Z21_idea_6_2_desc:0 "Serpentgard 6 desc"
+ Z21_idea_7_2:0 "Serpentgard 7"
+ Z21_idea_7_2_desc:0 "Serpentgard 7 desc" 
+
+ Z21_ideas_3:0 "Serpentgard Ideas 3"
+ Z21_ideas_3_start:0 "Serpentgard Traditions 3"
+ Z21_ideas_3_bonus:0 "Serpentgard Ambition 3"
+ Z21_idea_1_3:0 "Serpentgard 1"
+ Z21_idea_1_3_desc:0 "Serpentgard 1 desc"
+ Z21_idea_2_3:0 "Serpentgard 2"
+ Z21_idea_2_3_desc:0 "Serpentgard 2 desc"
+ Z21_idea_3_3:0 "Serpentgard 3"
+ Z21_idea_3_3_desc:0 "Serpentgard 3 desc"
+ Z21_idea_4_3:0 "Serpentgard 4"
+ Z21_idea_4_3_desc:0 "Serpentgard 4 desc"
+ Z21_idea_5_3:0 "Serpentgard 5"
+ Z21_idea_5_3_desc:0 "Serpentgard 5 desc"
+ Z21_idea_6_3:0 "Serpentgard 6"
+ Z21_idea_6_3_desc:0 "Serpentgard 6 desc"
+ Z21_idea_7_3:0 "Serpentgard 7"
+ Z21_idea_7_3_desc:0 "Serpentgard 7 desc"
