Rest of Alenic ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -1640,3 +1640,388 @@
  Z21_idea_6_3_desc:0 "Serpentgard 6 desc"
  Z21_idea_7_3:0 "Serpentgard 7"
  Z21_idea_7_3_desc:0 "Serpentgard 7 desc"
+
+
+ A34_ideas_1:0 "Bisani Ideas 1"
+ A34_ideas_1_start:0 "Bisani Traditions 1"
+ A34_ideas_1_bonus:0 "Bisani Ambition 1"
+ A34_idea_1_1:0 "Bisani 1"
+ A34_idea_1_1_desc:0 "Bisani 1 desc"
+ A34_idea_2_1:0 "Bisani 2"
+ A34_idea_2_1_desc:0 "Bisani 2 desc"
+ A34_idea_3_1:0 "Bisani 3"
+ A34_idea_3_1_desc:0 "Bisani 3 desc"
+ A34_idea_4_1:0 "Bisani 4"
+ A34_idea_4_1_desc:0 "Bisani 4 desc"
+ A34_idea_5_1:0 "Bisani 5"
+ A34_idea_5_1_desc:0 "Bisani 5 desc"
+ A34_idea_6_1:0 "Bisani 6"
+ A34_idea_6_1_desc:0 "Bisani 6 desc"
+ A34_idea_7_1:0 "Bisani 7"
+ A34_idea_7_1_desc:0 "Bisani 7 desc" 
+
+ A34_ideas_2:0 "Bisani Ideas 2"
+ A34_ideas_2_start:0 "Bisani Traditions 2"
+ A34_ideas_2_bonus:0 "Bisani Ambition 2"
+ A34_idea_1_2:0 "Bisani 1"
+ A34_idea_1_2_desc:0 "Bisani 1 desc"
+ A34_idea_2_2:0 "Bisani 2"
+ A34_idea_2_2_desc:0 "Bisani 2 desc"
+ A34_idea_3_2:0 "Bisani 3"
+ A34_idea_3_2_desc:0 "Bisani 3 desc"
+ A34_idea_4_2:0 "Bisani 4"
+ A34_idea_4_2_desc:0 "Bisani 4 desc"
+ A34_idea_5_2:0 "Bisani 5"
+ A34_idea_5_2_desc:0 "Bisani 5 desc"
+ A34_idea_6_2:0 "Bisani 6"
+ A34_idea_6_2_desc:0 "Bisani 6 desc"
+ A34_idea_7_2:0 "Bisani 7"
+ A34_idea_7_2_desc:0 "Bisani 7 desc" 
+
+ A34_ideas_3:0 "Bisani Ideas 3"
+ A34_ideas_3_start:0 "Bisani Traditions 3"
+ A34_ideas_3_bonus:0 "Bisani Ambition 3"
+ A34_idea_1_3:0 "Bisani 1"
+ A34_idea_1_3_desc:0 "Bisani 1 desc"
+ A34_idea_2_3:0 "Bisani 2"
+ A34_idea_2_3_desc:0 "Bisani 2 desc"
+ A34_idea_3_3:0 "Bisani 3"
+ A34_idea_3_3_desc:0 "Bisani 3 desc"
+ A34_idea_4_3:0 "Bisani 4"
+ A34_idea_4_3_desc:0 "Bisani 4 desc"
+ A34_idea_5_3:0 "Bisani 5"
+ A34_idea_5_3_desc:0 "Bisani 5 desc"
+ A34_idea_6_3:0 "Bisani 6"
+ A34_idea_6_3_desc:0 "Bisani 6 desc"
+ A34_idea_7_3:0 "Bisani 7"
+ A34_idea_7_3_desc:0 "Bisani 7 desc"
+
+
+ A48_ideas_1:0 "Sugamber Ideas 1"
+ A48_ideas_1_start:0 "Sugamber Traditions 1"
+ A48_ideas_1_bonus:0 "Sugamber Ambition 1"
+ A48_idea_1_1:0 "Sugamber 1"
+ A48_idea_1_1_desc:0 "Sugamber 1 desc"
+ A48_idea_2_1:0 "Sugamber 2"
+ A48_idea_2_1_desc:0 "Sugamber 2 desc"
+ A48_idea_3_1:0 "Sugamber 3"
+ A48_idea_3_1_desc:0 "Sugamber 3 desc"
+ A48_idea_4_1:0 "Sugamber 4"
+ A48_idea_4_1_desc:0 "Sugamber 4 desc"
+ A48_idea_5_1:0 "Sugamber 5"
+ A48_idea_5_1_desc:0 "Sugamber 5 desc"
+ A48_idea_6_1:0 "Sugamber 6"
+ A48_idea_6_1_desc:0 "Sugamber 6 desc"
+ A48_idea_7_1:0 "Sugamber 7"
+ A48_idea_7_1_desc:0 "Sugamber 7 desc" 
+
+ A48_ideas_2:0 "Sugamber Ideas 2"
+ A48_ideas_2_start:0 "Sugamber Traditions 2"
+ A48_ideas_2_bonus:0 "Sugamber Ambition 2"
+ A48_idea_1_2:0 "Sugamber 1"
+ A48_idea_1_2_desc:0 "Sugamber 1 desc"
+ A48_idea_2_2:0 "Sugamber 2"
+ A48_idea_2_2_desc:0 "Sugamber 2 desc"
+ A48_idea_3_2:0 "Sugamber 3"
+ A48_idea_3_2_desc:0 "Sugamber 3 desc"
+ A48_idea_4_2:0 "Sugamber 4"
+ A48_idea_4_2_desc:0 "Sugamber 4 desc"
+ A48_idea_5_2:0 "Sugamber 5"
+ A48_idea_5_2_desc:0 "Sugamber 5 desc"
+ A48_idea_6_2:0 "Sugamber 6"
+ A48_idea_6_2_desc:0 "Sugamber 6 desc"
+ A48_idea_7_2:0 "Sugamber 7"
+ A48_idea_7_2_desc:0 "Sugamber 7 desc" 
+
+ A48_ideas_3:0 "Sugamber Ideas 3"
+ A48_ideas_3_start:0 "Sugamber Traditions 3"
+ A48_ideas_3_bonus:0 "Sugamber Ambition 3"
+ A48_idea_1_3:0 "Sugamber 1"
+ A48_idea_1_3_desc:0 "Sugamber 1 desc"
+ A48_idea_2_3:0 "Sugamber 2"
+ A48_idea_2_3_desc:0 "Sugamber 2 desc"
+ A48_idea_3_3:0 "Sugamber 3"
+ A48_idea_3_3_desc:0 "Sugamber 3 desc"
+ A48_idea_4_3:0 "Sugamber 4"
+ A48_idea_4_3_desc:0 "Sugamber 4 desc"
+ A48_idea_5_3:0 "Sugamber 5"
+ A48_idea_5_3_desc:0 "Sugamber 5 desc"
+ A48_idea_6_3:0 "Sugamber 6"
+ A48_idea_6_3_desc:0 "Sugamber 6 desc"
+ A48_idea_7_3:0 "Sugamber 7"
+ A48_idea_7_3_desc:0 "Sugamber 7 desc"
+
+
+ W21_ideas_1:0 "Norinidor Ideas 1"
+ W21_ideas_1_start:0 "Norinidor Traditions 1"
+ W21_ideas_1_bonus:0 "Norinidor Ambition 1"
+ W21_idea_1_1:0 "Norinidor 1"
+ W21_idea_1_1_desc:0 "Norinidor 1 desc"
+ W21_idea_2_1:0 "Norinidor 2"
+ W21_idea_2_1_desc:0 "Norinidor 2 desc"
+ W21_idea_3_1:0 "Norinidor 3"
+ W21_idea_3_1_desc:0 "Norinidor 3 desc"
+ W21_idea_4_1:0 "Norinidor 4"
+ W21_idea_4_1_desc:0 "Norinidor 4 desc"
+ W21_idea_5_1:0 "Norinidor 5"
+ W21_idea_5_1_desc:0 "Norinidor 5 desc"
+ W21_idea_6_1:0 "Norinidor 6"
+ W21_idea_6_1_desc:0 "Norinidor 6 desc"
+ W21_idea_7_1:0 "Norinidor 7"
+ W21_idea_7_1_desc:0 "Norinidor 7 desc" 
+
+ W21_ideas_2:0 "Norinidor Ideas 2"
+ W21_ideas_2_start:0 "Norinidor Traditions 2"
+ W21_ideas_2_bonus:0 "Norinidor Ambition 2"
+ W21_idea_1_2:0 "Norinidor 1"
+ W21_idea_1_2_desc:0 "Norinidor 1 desc"
+ W21_idea_2_2:0 "Norinidor 2"
+ W21_idea_2_2_desc:0 "Norinidor 2 desc"
+ W21_idea_3_2:0 "Norinidor 3"
+ W21_idea_3_2_desc:0 "Norinidor 3 desc"
+ W21_idea_4_2:0 "Norinidor 4"
+ W21_idea_4_2_desc:0 "Norinidor 4 desc"
+ W21_idea_5_2:0 "Norinidor 5"
+ W21_idea_5_2_desc:0 "Norinidor 5 desc"
+ W21_idea_6_2:0 "Norinidor 6"
+ W21_idea_6_2_desc:0 "Norinidor 6 desc"
+ W21_idea_7_2:0 "Norinidor 7"
+ W21_idea_7_2_desc:0 "Norinidor 7 desc" 
+
+ W21_ideas_3:0 "Norinidor Ideas 3"
+ W21_ideas_3_start:0 "Norinidor Traditions 3"
+ W21_ideas_3_bonus:0 "Norinidor Ambition 3"
+ W21_idea_1_3:0 "Norinidor 1"
+ W21_idea_1_3_desc:0 "Norinidor 1 desc"
+ W21_idea_2_3:0 "Norinidor 2"
+ W21_idea_2_3_desc:0 "Norinidor 2 desc"
+ W21_idea_3_3:0 "Norinidor 3"
+ W21_idea_3_3_desc:0 "Norinidor 3 desc"
+ W21_idea_4_3:0 "Norinidor 4"
+ W21_idea_4_3_desc:0 "Norinidor 4 desc"
+ W21_idea_5_3:0 "Norinidor 5"
+ W21_idea_5_3_desc:0 "Norinidor 5 desc"
+ W21_idea_6_3:0 "Norinidor 6"
+ W21_idea_6_3_desc:0 "Norinidor 6 desc"
+ W21_idea_7_3:0 "Norinidor 7"
+ W21_idea_7_3_desc:0 "Norinidor 7 desc"
+
+
+ W22_ideas_1:0 "Reach Ideas 1"
+ W22_ideas_1_start:0 "Reach Traditions 1"
+ W22_ideas_1_bonus:0 "Reach Ambition 1"
+ W22_idea_1_1:0 "Reach 1"
+ W22_idea_1_1_desc:0 "Reach 1 desc"
+ W22_idea_2_1:0 "Reach 2"
+ W22_idea_2_1_desc:0 "Reach 2 desc"
+ W22_idea_3_1:0 "Reach 3"
+ W22_idea_3_1_desc:0 "Reach 3 desc"
+ W22_idea_4_1:0 "Reach 4"
+ W22_idea_4_1_desc:0 "Reach 4 desc"
+ W22_idea_5_1:0 "Reach 5"
+ W22_idea_5_1_desc:0 "Reach 5 desc"
+ W22_idea_6_1:0 "Reach 6"
+ W22_idea_6_1_desc:0 "Reach 6 desc"
+ W22_idea_7_1:0 "Reach 7"
+ W22_idea_7_1_desc:0 "Reach 7 desc" 
+
+ W22_ideas_2:0 "Reach Ideas 2"
+ W22_ideas_2_start:0 "Reach Traditions 2"
+ W22_ideas_2_bonus:0 "Reach Ambition 2"
+ W22_idea_1_2:0 "Reach 1"
+ W22_idea_1_2_desc:0 "Reach 1 desc"
+ W22_idea_2_2:0 "Reach 2"
+ W22_idea_2_2_desc:0 "Reach 2 desc"
+ W22_idea_3_2:0 "Reach 3"
+ W22_idea_3_2_desc:0 "Reach 3 desc"
+ W22_idea_4_2:0 "Reach 4"
+ W22_idea_4_2_desc:0 "Reach 4 desc"
+ W22_idea_5_2:0 "Reach 5"
+ W22_idea_5_2_desc:0 "Reach 5 desc"
+ W22_idea_6_2:0 "Reach 6"
+ W22_idea_6_2_desc:0 "Reach 6 desc"
+ W22_idea_7_2:0 "Reach 7"
+ W22_idea_7_2_desc:0 "Reach 7 desc" 
+
+ W22_ideas_3:0 "Reach Ideas 3"
+ W22_ideas_3_start:0 "Reach Traditions 3"
+ W22_ideas_3_bonus:0 "Reach Ambition 3"
+ W22_idea_1_3:0 "Reach 1"
+ W22_idea_1_3_desc:0 "Reach 1 desc"
+ W22_idea_2_3:0 "Reach 2"
+ W22_idea_2_3_desc:0 "Reach 2 desc"
+ W22_idea_3_3:0 "Reach 3"
+ W22_idea_3_3_desc:0 "Reach 3 desc"
+ W22_idea_4_3:0 "Reach 4"
+ W22_idea_4_3_desc:0 "Reach 4 desc"
+ W22_idea_5_3:0 "Reach 5"
+ W22_idea_5_3_desc:0 "Reach 5 desc"
+ W22_idea_6_3:0 "Reach 6"
+ W22_idea_6_3_desc:0 "Reach 6 desc"
+ W22_idea_7_3:0 "Reach 7"
+ W22_idea_7_3_desc:0 "Reach 7 desc"
+
+
+ B40_ideas_1:0 "Alenor Ideas 1"
+ B40_ideas_1_start:0 "Alenor Traditions 1"
+ B40_ideas_1_bonus:0 "Alenor Ambition 1"
+ B40_idea_1_1:0 "Alenor 1"
+ B40_idea_1_1_desc:0 "Alenor 1 desc"
+ B40_idea_2_1:0 "Alenor 2"
+ B40_idea_2_1_desc:0 "Alenor 2 desc"
+ B40_idea_3_1:0 "Alenor 3"
+ B40_idea_3_1_desc:0 "Alenor 3 desc"
+ B40_idea_4_1:0 "Alenor 4"
+ B40_idea_4_1_desc:0 "Alenor 4 desc"
+ B40_idea_5_1:0 "Alenor 5"
+ B40_idea_5_1_desc:0 "Alenor 5 desc"
+ B40_idea_6_1:0 "Alenor 6"
+ B40_idea_6_1_desc:0 "Alenor 6 desc"
+ B40_idea_7_1:0 "Alenor 7"
+ B40_idea_7_1_desc:0 "Alenor 7 desc" 
+
+ B40_ideas_2:0 "Alenor Ideas 2"
+ B40_ideas_2_start:0 "Alenor Traditions 2"
+ B40_ideas_2_bonus:0 "Alenor Ambition 2"
+ B40_idea_1_2:0 "Alenor 1"
+ B40_idea_1_2_desc:0 "Alenor 1 desc"
+ B40_idea_2_2:0 "Alenor 2"
+ B40_idea_2_2_desc:0 "Alenor 2 desc"
+ B40_idea_3_2:0 "Alenor 3"
+ B40_idea_3_2_desc:0 "Alenor 3 desc"
+ B40_idea_4_2:0 "Alenor 4"
+ B40_idea_4_2_desc:0 "Alenor 4 desc"
+ B40_idea_5_2:0 "Alenor 5"
+ B40_idea_5_2_desc:0 "Alenor 5 desc"
+ B40_idea_6_2:0 "Alenor 6"
+ B40_idea_6_2_desc:0 "Alenor 6 desc"
+ B40_idea_7_2:0 "Alenor 7"
+ B40_idea_7_2_desc:0 "Alenor 7 desc" 
+
+ B40_ideas_3:0 "Alenor Ideas 3"
+ B40_ideas_3_start:0 "Alenor Traditions 3"
+ B40_ideas_3_bonus:0 "Alenor Ambition 3"
+ B40_idea_1_3:0 "Alenor 1"
+ B40_idea_1_3_desc:0 "Alenor 1 desc"
+ B40_idea_2_3:0 "Alenor 2"
+ B40_idea_2_3_desc:0 "Alenor 2 desc"
+ B40_idea_3_3:0 "Alenor 3"
+ B40_idea_3_3_desc:0 "Alenor 3 desc"
+ B40_idea_4_3:0 "Alenor 4"
+ B40_idea_4_3_desc:0 "Alenor 4 desc"
+ B40_idea_5_3:0 "Alenor 5"
+ B40_idea_5_3_desc:0 "Alenor 5 desc"
+ B40_idea_6_3:0 "Alenor 6"
+ B40_idea_6_3_desc:0 "Alenor 6 desc"
+ B40_idea_7_3:0 "Alenor 7"
+ B40_idea_7_3_desc:0 "Alenor 7 desc"
+
+
+ B00_ideas_1:0 "Alenic colonial Ideas 1"
+ B00_ideas_1_start:0 "Alenic colonial Traditions 1"
+ B00_ideas_1_bonus:0 "Alenic colonial Ambition 1"
+ B00_idea_1_1:0 "Alenic colonial 1"
+ B00_idea_1_1_desc:0 "Alenic colonial 1 desc"
+ B00_idea_2_1:0 "Alenic colonial 2"
+ B00_idea_2_1_desc:0 "Alenic colonial 2 desc"
+ B00_idea_3_1:0 "Alenic colonial 3"
+ B00_idea_3_1_desc:0 "Alenic colonial 3 desc"
+ B00_idea_4_1:0 "Alenic colonial 4"
+ B00_idea_4_1_desc:0 "Alenic colonial 4 desc"
+ B00_idea_5_1:0 "Alenic colonial 5"
+ B00_idea_5_1_desc:0 "Alenic colonial 5 desc"
+ B00_idea_6_1:0 "Alenic colonial 6"
+ B00_idea_6_1_desc:0 "Alenic colonial 6 desc"
+ B00_idea_7_1:0 "Alenic colonial 7"
+ B00_idea_7_1_desc:0 "Alenic colonial 7 desc" 
+
+ B00_ideas_2:0 "Alenic colonial Ideas 2"
+ B00_ideas_2_start:0 "Alenic colonial Traditions 2"
+ B00_ideas_2_bonus:0 "Alenic colonial Ambition 2"
+ B00_idea_1_2:0 "Alenic colonial 1"
+ B00_idea_1_2_desc:0 "Alenic colonial 1 desc"
+ B00_idea_2_2:0 "Alenic colonial 2"
+ B00_idea_2_2_desc:0 "Alenic colonial 2 desc"
+ B00_idea_3_2:0 "Alenic colonial 3"
+ B00_idea_3_2_desc:0 "Alenic colonial 3 desc"
+ B00_idea_4_2:0 "Alenic colonial 4"
+ B00_idea_4_2_desc:0 "Alenic colonial 4 desc"
+ B00_idea_5_2:0 "Alenic colonial 5"
+ B00_idea_5_2_desc:0 "Alenic colonial 5 desc"
+ B00_idea_6_2:0 "Alenic colonial 6"
+ B00_idea_6_2_desc:0 "Alenic colonial 6 desc"
+ B00_idea_7_2:0 "Alenic colonial 7"
+ B00_idea_7_2_desc:0 "Alenic colonial 7 desc" 
+
+ B00_ideas_3:0 "Alenic colonial Ideas 3"
+ B00_ideas_3_start:0 "Alenic colonial Traditions 3"
+ B00_ideas_3_bonus:0 "Alenic colonial Ambition 3"
+ B00_idea_1_3:0 "Alenic colonial 1"
+ B00_idea_1_3_desc:0 "Alenic colonial 1 desc"
+ B00_idea_2_3:0 "Alenic colonial 2"
+ B00_idea_2_3_desc:0 "Alenic colonial 2 desc"
+ B00_idea_3_3:0 "Alenic colonial 3"
+ B00_idea_3_3_desc:0 "Alenic colonial 3 desc"
+ B00_idea_4_3:0 "Alenic colonial 4"
+ B00_idea_4_3_desc:0 "Alenic colonial 4 desc"
+ B00_idea_5_3:0 "Alenic colonial 5"
+ B00_idea_5_3_desc:0 "Alenic colonial 5 desc"
+ B00_idea_6_3:0 "Alenic colonial 6"
+ B00_idea_6_3_desc:0 "Alenic colonial 6 desc"
+ B00_idea_7_3:0 "Alenic colonial 7"
+ B00_idea_7_3_desc:0 "Alenic colonial 7 desc"
+
+
+ B36_ideas_1:0 "Marrhold Ideas 1"
+ B36_ideas_1_start:0 "Marrhold Traditions 1"
+ B36_ideas_1_bonus:0 "Marrhold Ambition 1"
+ B36_idea_1_1:0 "Marrhold 1"
+ B36_idea_1_1_desc:0 "Marrhold 1 desc"
+ B36_idea_2_1:0 "Marrhold 2"
+ B36_idea_2_1_desc:0 "Marrhold 2 desc"
+ B36_idea_3_1:0 "Marrhold 3"
+ B36_idea_3_1_desc:0 "Marrhold 3 desc"
+ B36_idea_4_1:0 "Marrhold 4"
+ B36_idea_4_1_desc:0 "Marrhold 4 desc"
+ B36_idea_5_1:0 "Marrhold 5"
+ B36_idea_5_1_desc:0 "Marrhold 5 desc"
+ B36_idea_6_1:0 "Marrhold 6"
+ B36_idea_6_1_desc:0 "Marrhold 6 desc"
+ B36_idea_7_1:0 "Marrhold 7"
+ B36_idea_7_1_desc:0 "Marrhold 7 desc" 
+
+ B36_ideas_2:0 "Marrhold Ideas 2"
+ B36_ideas_2_start:0 "Marrhold Traditions 2"
+ B36_ideas_2_bonus:0 "Marrhold Ambition 2"
+ B36_idea_1_2:0 "Marrhold 1"
+ B36_idea_1_2_desc:0 "Marrhold 1 desc"
+ B36_idea_2_2:0 "Marrhold 2"
+ B36_idea_2_2_desc:0 "Marrhold 2 desc"
+ B36_idea_3_2:0 "Marrhold 3"
+ B36_idea_3_2_desc:0 "Marrhold 3 desc"
+ B36_idea_4_2:0 "Marrhold 4"
+ B36_idea_4_2_desc:0 "Marrhold 4 desc"
+ B36_idea_5_2:0 "Marrhold 5"
+ B36_idea_5_2_desc:0 "Marrhold 5 desc"
+ B36_idea_6_2:0 "Marrhold 6"
+ B36_idea_6_2_desc:0 "Marrhold 6 desc"
+ B36_idea_7_2:0 "Marrhold 7"
+ B36_idea_7_2_desc:0 "Marrhold 7 desc" 
+
+ B36_ideas_3:0 "Marrhold Ideas 3"
+ B36_ideas_3_start:0 "Marrhold Traditions 3"
+ B36_ideas_3_bonus:0 "Marrhold Ambition 3"
+ B36_idea_1_3:0 "Marrhold 1"
+ B36_idea_1_3_desc:0 "Marrhold 1 desc"
+ B36_idea_2_3:0 "Marrhold 2"
+ B36_idea_2_3_desc:0 "Marrhold 2 desc"
+ B36_idea_3_3:0 "Marrhold 3"
+ B36_idea_3_3_desc:0 "Marrhold 3 desc"
+ B36_idea_4_3:0 "Marrhold 4"
+ B36_idea_4_3_desc:0 "Marrhold 4 desc"
+ B36_idea_5_3:0 "Marrhold 5"
+ B36_idea_5_3_desc:0 "Marrhold 5 desc"
+ B36_idea_6_3:0 "Marrhold 6"
+ B36_idea_6_3_desc:0 "Marrhold 6 desc"
+ B36_idea_7_3:0 "Marrhold 7"
+ B36_idea_7_3_desc:0 "Marrhold 7 desc"
