Majesty ideas mention the APC at the end

--- a/localisation/cot_ideas_l_english.yml
+++ b/localisation/cot_ideas_l_english.yml
@@ -397,7 +397,7 @@
  dip11_6_a:0 "Spreading our Wings"
  dip11_6_a_desc:0 "As a confirmation of our Majesty, when we spread our wings and soar above the others, many come seeking shelter within our shadow."
  dip11_7_a:0 "Personify Pietas"
- dip11_7_a_desc:0 "The whole apparatus of our realm is dedicated to one purpose, a united chorus of effort channeled to uplift our nation to it's rightful status above all others.\n§JAdd +1 ASS Point§!"
+ dip11_7_a_desc:0 "The whole apparatus of our realm is dedicated to one purpose, a united chorus of effort channeled to uplift our nation to it's rightful status above all others.\n§JAdd +1 ASS Point\nFor every +1 Diplomatic Reputation over +5, you get -0.5% All Power Costs§!"
  
  ##### OATH OF VAASS'S HORSE FETISH #####
  
