Open mind ideas mention local goods produced from minorities

--- a/localisation/cot_ideas_l_english.yml
+++ b/localisation/cot_ideas_l_english.yml
@@ -36,7 +36,7 @@
  adm2_6_a:0 "National Universities"
  adm2_6_a_desc:0 "Our search for talent in unlikely places has led to the creation of institutes of higher education free from dogma, leading to an abundance of talent eager to help the country that provided them an opportunity."
  adm2_7_a:0 "Multicultural Talent"
- adm2_7_a_desc:0 "By diversifying our outlook beyond conventional wisdom we have begun to find a wealth of talent in our realm we may have otherwise overlooked."
+ adm2_7_a_desc:0 "By diversifying our outlook beyond conventional wisdom we have begun to find a wealth of talent in our realm we may have otherwise overlooked.\n§JSmall racial minorities give +0.1 local goods produced. Large racial minorities give +0.25 local goods produced§!"
  
  ##### OATH OF EXPANSION #####
  
